# docspine

./: .gitignore  AGENT.md  AGENTS.md  README.md  README.zh.md  main.py  pyproject.toml  优选金股策略分析与实现.md  迈瑞_2024.md
docs/plans/: 2026-03-16-analyzer-real-pdf-normalization-design.md  2026-03-16-analyzer-real-pdf-normalization-implementation-plan.md  2026-03-16-docling-backend-paged-conversion-design.md  2026-03-16-docling-backend-paged-conversion-implementation-plan.md  2026-03-16-progressive-disclosure-design.md  2026-03-16-progressive-disclosure-implementation-plan.md  2026-03-17-docspine-rename-implementation-plan.md
src/docling_progressive/: __init__.py  analyzer.py  cli.py  config.py  models.py  pipeline.py  renderer.py  segmenter.py
src/docling_progressive/converter/: base.py  docling_backend.py  factory.py  models.py
src/docspine/: __init__.py  analyzer.py  cli.py  config.py  models.py  pipeline.py  progress.py  renderer.py  segmenter.py  stream_pipeline.py  validator.py
src/docspine/converter/: __init__.py  base.py  docling_backend.py  factory.py  models.py
tests/: test_analyzer.py  test_cli.py  test_cli_main.py  test_config.py  test_converter.py  test_docling_backend.py  test_factory.py  test_models.py  test_pipeline.py  test_pipeline_regression.py  test_renderer.py  test_segmenter.py  test_validator.py  test_validator_recursive.py
tests/fixtures/: sample_outline.md
tests/fixtures/sample_expected_tree/: AGENT.md  AGENTS.md  content.md  context.md  index.md  node.json
tests/fixtures/sample_expected_tree/sections/01-business-overview/: content.md  (+2 more)
(+3 files in other folders)
