[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docspine"
version = "0.1.0"
description = "Progressive document structuring for long-form documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.80.0",
    "pypdf>=5.4.0",
]

[project.scripts]
docspine = "docspine.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
